feature: 1.渲染测试实现 2.优化了些细节实现(如主手持有拴绳左键实体(+shift)可断开拴绳对象(所有)连接) 3.游戏规则 todo:1.渲染器相关代码并未清除（暂时） 2.永恒土豆待分离逻辑